Fixed logo spacing and button font color

--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ body {
 #home-logo {
     width: 80px;
     height: 55px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 /*/  Home Navigation  //*/
@@ -372,6 +372,7 @@ body {
     border-radius: 20px;
     box-shadow: 1px 1px 5px rgb(210, 210, 210);
     background-color: white;
+    color: black;
 }.contact-button:hover {
     cursor: pointer;
     box-shadow: 1px 1px 5px rgb(146, 146, 146);
